# mealmetric-backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0f2d3a91c6b4_add_normalized_role_membership_tables.py  1c2d4e6f8a9b_add_phase_j_vendor_domain_schema.py  4a7c9e1d2b3f_add_pt_meal_plan_recommendations.py  6d1f8b42c3aa_add_phase_3b_bookmarks_vendor_membership_and_vendor_zip.py  8c0a5f7d2c19_add_pt_training_domain_schema_foundation.py  9f3a2d7c1b4e_add_phase_i_metrics_domain_schema_foundation.py  a1e4c9d7f6b2_complete_phase_m_operational_hardening.py  a7d5b6e49123_add_stripe_price_id_to_payment_sessions.py  (+8 more)
backups/: mealmetric_pre_phase3b_20260321_121926.dump
tests/: conftest.py  test_admin.py  test_admin_orders.py  test_admin_vendors.py  test_auth.py  test_bff.py  test_checkout_kill_switch_blocked.py  test_checkout_phase_e_bridge.py  test_checkout_stripe_failure.py  test_checkout_success_mocked.py  test_client_meal_plans_api.py  test_client_metrics_api.py  test_client_orders_api.py  test_client_training_api.py  test_db_health_success_mocked.py  test_db_health_unconfigured.py  test_health.py  test_input_size_guard.py  test_jwt_service.py  test_kill_switch.py  test_kill_switch_db_health_allowed.py  test_layers.py  test_logging.py  test_meal_plan_recommendations_api.py  test_metrics.py  test_metrics_models.py  test_metrics_repo.py  test_metrics_service.py  test_order_repos.py  test_order_service.py  test_order_service_transactional.py  test_payment_repos.py  test_pt_meal_plans_api.py  test_pt_metrics_api.py  test_pt_training_api.py  test_rate_limiter.py  test_recommendation_models.py  test_recommendation_repo.py  test_reconciliation_service.py  test_request_id.py  (+12 more)
tools/: README.md  check_alembic_current.py  check_db_connectivity.py
(+105 files in other folders)
